--- a/src/app/dashboard/subTipoOT/listar/sub-tipo.component.html
+++ b/src/app/dashboard/subTipoOT/listar/sub-tipo.component.html
@@ -7,19 +7,34 @@
       </p>
     </div>
       <div class="container">
-          <div  class="buscar">
+          <!--                 <div  class="buscar">
 
 
-      <mat-form-field  >
+                      <mat-form-field  >
 
-       <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
+                      <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
 
-     </mat-form-field><mat-icon>search</mat-icon>
+                    </mat-form-field><mat-icon>search</mat-icon>
 
-    <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../crearsubtipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
+                    <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../crearsubtipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
 
 
-  </div>
+                  </div> -->
+                  <div  class="buscar">
+                    <form [formGroup]="formGroupPesquisa" (ngSubmit)="formGroupPesquisa.valid && listarItens()">
+                        
+                            <mat-form-field>
+                                <input matInput placeholder="Buscar" formControlName="nome" autocomplete="off" />
+                            </mat-form-field>
+                            <button class="mat-mini-fab" mat-mini-fab >
+                              <mat-icon>search</mat-icon>
+                            </button>
+                           <!--  <button mat-mini-fab type="button" color="warn" (click)="limparPesquisa()">
+                              <mat-icon>delete_sweep</mat-icon></button> -->
+                              <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../crearsubtipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
+                       
+                      </form>
+                </div>
 
   <div class="tablero">
    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -64,7 +79,7 @@
 
 
      <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+      <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro ""</td><!-- {{input.value}} -->
     </tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
