--- a/src/app/dashboard/subTipoOT/listar/sub-tipo.component.scss
+++ b/src/app/dashboard/subTipoOT/listar/sub-tipo.component.scss
@@ -1,6 +1,6 @@
 
 .toolbar{
-  
+
     margin-top: 1px; /* height of header */
     padding: 0.8px;
     height: 50px;
@@ -19,8 +19,14 @@ margin-top: 10px;
 width: 100%;
 }
 
+.mat-mini-fab{
+  color: blue;
+  background-color: #ffffff;
+}
+
+
 .buscar{
-height: 55px;
+height: 60px;
 margin-top: 3px;
 margin-right: auto;
  margin-left: auto;
@@ -34,7 +40,8 @@ padding: 1px;
 .nuevo{
 
   float:right;
-  margin: 10px;
+
+
 
 }
 
