--- a/src/app/dashboard/tiposOT/crear/crear-tipo.component.scss
+++ b/src/app/dashboard/tiposOT/crear/crear-tipo.component.scss
@@ -36,6 +36,8 @@ mat-card{
 
   margin-left:auto;
   margin-right:auto;
+  margin-top: 50px; /* height of header */
+  padding: 10px;
 
 
 }
@@ -57,6 +59,9 @@ mat-card-title{
    border-color:cornflowerblue;
    border-style:solid;
    border-radius: 5px;
+   /* height of header */
+
+
 
 
  }
@@ -92,7 +97,12 @@ mat-card-title{
   border-radius: 15px;
 
 }
-
+input{
+  font-family: Arial; font-size: 12pt;
+  }
+mat-select{
+  font-family: Arial; font-size: 10pt;
+}
 .btn2:hover{
   background-color: #37f707;
 }
