--- a/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.html
+++ b/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.html
@@ -26,7 +26,7 @@
  -->
         <mat-form-field fxFlex appearance="outline">
           <mat-label class="label">Unidad Tecnica</mat-label>
-          <mat-select [ngModel]="selectedUnidadTecnica.idDptoTecnico" formControlName="IdDptoTecnico">
+          <mat-select [ngModel]="selectedUnidadTecnica.idDptoTecnico" (valueChange)="cargarusuario($event)" formControlName="IdDptoTecnico">
             <mat-option *ngFor="let UnidadTecnica of unidadTecnicas" [value]="UnidadTecnica.idDptoTecnico">
               {{UnidadTecnica.nombre}}
             </mat-option>
@@ -40,7 +40,7 @@
      </mat-form-field> -->
      <mat-form-field fxFlex appearance="outline">
       <mat-label class="label">Usuario</mat-label>
-      <mat-select [ngModel]="selectedUsuario.id" >
+      <mat-select [ngModel]="selectedUsuario" formControlName="IdUsrResponsable">
         <mat-option *ngFor="let usuario of usuarios" [value]="usuario.idUser">
           {{usuario.persona.nombreCompleto}}
         </mat-option>
@@ -49,11 +49,11 @@
 
   </div>
    <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-    <section class="example-section" >
-
-      <p><mat-checkbox formControlName="TieneSubTipo">Tiene SubTipo</mat-checkbox></p>
-
-    </section>
+    <mat-radio-group formControlName="TieneSubTipo">
+      <mat-label class="label">Tiene SubTipo</mat-label>&nbsp;
+      <mat-radio-button value="1">SI</mat-radio-button>&nbsp;
+      <mat-radio-button value="0">NO</mat-radio-button>
+    </mat-radio-group>
 
      <mat-form-field fxFlex appearance="outline">
        <mat-label class="label">Estado</mat-label>
