--- a/src/app/dashboard/persona/editperfil/editperfil.component.html
+++ b/src/app/dashboard/persona/editperfil/editperfil.component.html
@@ -53,7 +53,7 @@
         </div>
       </form>
       </mat-card-content>
-
+<!--
       <div style="width: auto;margin:0 auto" >
         <mat-accordion  >
             <mat-expansion-panel style="background-color: #D6EAF8;" >
@@ -62,10 +62,10 @@
                         Cambiar Correo
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-password></app-password>
+                <app-email></app-email>
             </mat-expansion-panel>
         </mat-accordion>
-      </div>
+      </div> -->
 
       <div style="width: auto;margin:0 auto" >
         <mat-accordion  >
@@ -80,7 +80,7 @@
         </mat-accordion>
       </div>
 
-      <div style="width: auto;margin:0 auto" >
+      <!-- <div style="width: auto;margin:0 auto" >
         <mat-accordion  >
             <mat-expansion-panel style="background-color: #D6EAF8;" >
                 <mat-expansion-panel-header fxLayoutAlign="center none" >
@@ -91,7 +91,7 @@
                 <app-password></app-password>
             </mat-expansion-panel>
         </mat-accordion>
-      </div>
+      </div> -->
 
     </mat-card>
   </div>
