--- a/src/app/dashboard/subTipoOT/crear/crear-subtipo.component.scss
+++ b/src/app/dashboard/subTipoOT/crear/crear-subtipo.component.scss
@@ -102,10 +102,10 @@ mat-card-title{
 
 }
 
-.btn2:hover{
+/* .btn2:hover{
   background-color: #33f303;
 }
-
+ */
 mat-card-content{
   margin: 10px;
 }
