--- a/src/app/dashboard/subTipoOT/listar/sub-tipo.component.scss
+++ b/src/app/dashboard/subTipoOT/listar/sub-tipo.component.scss
@@ -22,6 +22,8 @@ width: 100%;
 .mat-mini-fab{
   color: blue;
   background-color: #ffffff;
+  margin: 10px;
+  
 }
 
 
@@ -40,10 +42,10 @@ padding: 1px;
 .nuevo{
 
   float:right;
-
-
-
+  margin: 10px;
 }
+
+
 
 .tablero{
 max-height: auto;
