--- a/src/app/dashboard/tiposOT/crear/crear-tipo.component.scss
+++ b/src/app/dashboard/tiposOT/crear/crear-tipo.component.scss
@@ -103,9 +103,9 @@ input{
 mat-select{
   font-family: Arial; font-size: 10pt;
 }
-.btn2:hover{
+/* .btn2:hover{
   background-color: #37f707;
-}
+} */
 
 mat-card-content{
   margin: 10px;
