--- a/src/app/dashboard/tiposOT/listar/tipo-ot.component.scss
+++ b/src/app/dashboard/tiposOT/listar/tipo-ot.component.scss
@@ -38,6 +38,14 @@ width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.mat-mini-fab{
+  color: blue;
+  background-color: #ffffff;
+  margin: 10px;
+  
+}
+
 .buscar{
 height: 60px;
 margin-top: 3px;
