--- a/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.scss
+++ b/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.scss
@@ -57,10 +57,9 @@ input{
 
   font-size: 10px;
   font-style: italic;
-
-
   border-radius: 15px;
-
+  background-color: #56B53F;
+  color: white;
 }
 .btn2:hover{
   background-color: #56B53F;
@@ -83,6 +82,7 @@ input{
   border-color:cornflowerblue;
   border-style:solid;
   border-radius: 5px;
+  width: 500px;
 
 
 }
@@ -93,5 +93,21 @@ mat-dialog-content{
 }
 mat-dialog-actions{
   display: block;
-  float: left;
+  .btn-action{
+    
+    float: right;
+  }
+  
 }
+
+.title{
+ background-color: #F3F7F3;
+ .text{
+  color: #123CF6;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-style: normal;
+  text-align: center;
+}
+} 
+
