--- a/src/app/dashboard/tiposOT/listar/tipo-ot.component.html
+++ b/src/app/dashboard/tiposOT/listar/tipo-ot.component.html
@@ -9,35 +9,19 @@
           </p>
         </div>
   <div class="container">
-          <!-- <div  class="buscar">
+    <div  class="buscar">
 
 
-                <mat-form-field  >
-
-                <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
-
-              </mat-form-field><mat-icon>search</mat-icon>
-
-                <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../creartipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
-
-
-           -->
-          <div  class="buscar">
-            <form [formGroup]="formGroupPesquisa" (ngSubmit)="formGroupPesquisa.valid && listarItens()">
-                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-                    <mat-form-field>
-                        <input matInput placeholder="Buscar" formControlName="nome" autocomplete="off" />
-                    </mat-form-field>
-                    <button mat-mini-fab color="primary">
-                      <mat-icon>search</mat-icon>
-                    </button>
-                    <button mat-mini-fab type="button" color="warn" (click)="limparPesquisa()">
-                      <mat-icon>delete_sweep</mat-icon></button>
-              <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../creartipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
-
-                </div>
-
-              </form>
+      <mat-form-field  >
+    
+        <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
+    
+      </mat-form-field><mat-icon>search</mat-icon>
+    
+      <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../creartipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
+    
+    
+    </div>
 
         </div>
     <div class="tablero">
@@ -60,9 +44,10 @@
                       </ng-container>
 
 
-                      <ng-container matColumnDef="usuario">
+                      <ng-container matColumnDef="usuarioResponsable">
                         <th mat-header-cell *matHeaderCellDef> Usuario </th>
-                        <td mat-cell *matCellDef="let element"> {{element.usuarioResponsable.persona.nombreCompleto}} </td>
+                        <td mat-cell *matCellDef="let element"> <span *ngIf="element.usuarioResponsable!= null">
+                          {{element.usuarioResponsable.persona.nombreCompleto}} </span></td>
                       </ng-container>
 
 
@@ -83,12 +68,12 @@
 
 
                       <tr class="mat-row" *matNoDataRow>
-                        <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro ""</td>
+                        <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
                       </tr>
                 </table>
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
     </div>
-  </div>
+
 </div>
 
 
