--- a/src/app/dashboard/unidadtecnica/create/create.component.scss
+++ b/src/app/dashboard/unidadtecnica/create/create.component.scss
@@ -100,7 +100,12 @@ mat-card-title{
 mat-card-content{
   margin: 10px;
 }
-
+input{
+  font-family: Arial; font-size: 10pt; 
+  }
+  mat-select{
+    font-family: Arial; font-size: 10pt; 
+  }
 /* .green {
     background-color: green;
 }
