--- a/src/app/dashboard/unidadtecnica/modify-technicalUnit/technicalunit.component.scss
+++ b/src/app/dashboard/unidadtecnica/modify-technicalUnit/technicalunit.component.scss
@@ -16,7 +16,12 @@ a.mat-stroked-button .mat-icon {
 mat-dialog-content{
   border: 30px;
 }
-
+input{
+  font-family: Arial; font-size: 10pt; 
+  }
+  mat-select{
+    font-family: Arial; font-size: 10pt; 
+  }
 .btn1{
     font-family: helvetica;
 
