--- a/src/app/dashboard/unidadtecnica/create/create.component.html
+++ b/src/app/dashboard/unidadtecnica/create/create.component.html
@@ -102,7 +102,7 @@
                         <div class="boton">
                           <button class="btn1"  type="cancel"  mat-raised-button color="warn" routerLink="../unidadTecnica" ><!-- (click)="enableDisableRule()"    [ngClass]="{'primary' : toggle, 'red': !toggle}" -->
                             <mat-icon>cancel</mat-icon>Cancelar</button>
-                          <button class="btn2" id="btnSubmit" type="submit"  mat-raised-button color="primary" ><!-- (click)="enableDisableRule()"    [ngClass]="{'primary' : toggle, 'red': !toggle}" -->
+                          <button class="btn2" id="btnSubmit" type="submit"  mat-raised-button  ><!-- (click)="enableDisableRule()"    [ngClass]="{'primary' : toggle, 'red': !toggle}" -->
                           <mat-icon>save</mat-icon>GUARDAR</button>
 
                         </div>
