--- a/src/app/dashboard/persona/email/email.component.html
+++ b/src/app/dashboard/persona/email/email.component.html
@@ -5,14 +5,14 @@
      <div >
      <mat-form-field>
          <mat-label >Correo Eliectronico Actual</mat-label>
-         <input matInput type="password"  id="oldPassword" formControlName="OldEmail">
+         <input matInput type="text"   formControlName="OldEmail">
 
      </mat-form-field>
      </div>
      <div >
          <mat-form-field>
          <mat-label >Nuevo Correo Electronico</mat-label>
-         <input matInput type="password" id="newPassword" formControlName="NewEmail">
+         <input matInput type="text"  formControlName="NewEmail">
 
        </mat-form-field>
      </div>
