--- a/src/app/dashboard/tiposOT/listar/tipo-ot.component.html
+++ b/src/app/dashboard/tiposOT/listar/tipo-ot.component.html
@@ -9,21 +9,73 @@
           </p>
         </div>
   <div class="container">
-    <div  class="buscar">
+    <div class="busqueda" [formGroup]="formControl">
+      <div class="izquierda">
+         
+      <mat-form-field>
+        <mat-label>BUSCAR TIPO OT</mat-label>
 
+        <input type="text" matInput placeholder="Buscar Tipo" formControlName="nombre">
+        <a class="icon"  matSuffix>
+          <mat-icon>search</mat-icon>
+        </a>
+      </mat-form-field>
 
-      <mat-form-field  >
-    
-        <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
-    
-      </mat-form-field><mat-icon>search</mat-icon>
-    
-      <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../creartipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
-    
-    
+      &nbsp;
+      <mat-form-field >
+        <mat-label>UNIDAD TECNICA</mat-label>
+        <mat-select  formControlName="dptoTecnico_filter" >
+  
+          <mat-option *ngFor="let dpto of dptoTecnicos" [value]="dpto.idDptoTecnico">
+            {{dpto.nombre}}
+          </mat-option>
+  
+        </mat-select><a class="icon"  matSuffix>
+          <mat-icon>search</mat-icon>
+        </a>
+      </mat-form-field>
+      <button class="borrar" mat-icon-button  (click)="clear()" matTooltip="LIMPIAR"><mat-icon>delete_sweep</mat-icon></button>
+        </div>
+           <div class="derecha">   
+            <button class="create-ot-button" routerLinkActive="list-item-active" routerLink="../creartipo">
+              <div class="button-icon-container">
+                  <mat-icon class="button-icon">group_add</mat-icon> 
+              </div>          
+                <p class="button-title">NUEVO</p>
+            </button>
+          </div>
     </div>
 
-        </div>
+   <!--  <form  class="buscar"[formGroup]="formControl">
+
+      <mat-form-field>
+        <mat-label> Buscar Tipo</mat-label>
+
+        <input type="text" matInput placeholder="Buscar Tipo" formControlName="nombre">
+        <a class="icon"  matSuffix>
+          <mat-icon>search</mat-icon>
+        </a>
+      </mat-form-field>
+
+         &nbsp;
+    <mat-form-field >
+      <mat-label>UNIDAD TECNICA</mat-label>
+      <mat-select  formControlName="dptoTecnico_filter" >
+
+        <mat-option *ngFor="let dpto of dptoTecnicos" [value]="dpto.idDptoTecnico">
+          {{dpto.nombre}}
+        </mat-option>
+
+      </mat-select><a class="icon"  matSuffix>
+        <mat-icon>search</mat-icon>
+      </a>
+    </mat-form-field>
+
+
+    <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../creartipo"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
+
+    </form> -->
+
     <div class="tablero">
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -68,7 +120,7 @@
 
 
                       <tr class="mat-row" *matNoDataRow>
-                        <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+                        <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro </td>
                       </tr>
                 </table>
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="100" [pageSize]="5"></mat-paginator>
