--- a/src/app/dashboard/usuario/modifyusers/modifyusers.component.html
+++ b/src/app/dashboard/usuario/modifyusers/modifyusers.component.html
@@ -1,76 +1,84 @@
+<div class="title">
+ <h2 class="text">MODIFICAR USUARIO</h2>
+</div>
+ <div class="content">
+ <mat-dialog-content [formGroup] = "form">
 
- <h2 mat-dialog-title>MODIFICAR USUARIO</h2>
+    <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
-<div class="content">
-<mat-dialog-content [formGroup] = "form">
+     <mat-form-field class="createUser" fxFlex>
+       <mat-label class="label">Id Usuario</mat-label>
+
+         <input matInput placeholder = "Id Usuario" formControlName="idUser" readonly onmousedown="return false;">
+     </mat-form-field>
+    </div>
+    <!-- <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+       <mat-form-field class="createUser" fxFlex>
+        <mat-label class="label">Nombre Completo</mat-label>
+
+          <input matInput placeholder = "Nombre Completo" formControlName="nombreCompleto" readonly onmousedown="return false;">
+      </mat-form-field>
+    </div> -->
+     <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+     <mat-form-field class="createUser" fxFlex>
+       <mat-label class="label">Abreviatura</mat-label>
+         <input matInput placeholder = "Abreviatura" formControlName="abreviatura" readonly onmousedown="return false;">
+     </mat-form-field>
+
+
+
+
+
+   </div>
+   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+    <mat-form-field fxFlex appearance="outline">
+      <mat-label class="label">Unidad Tecnica</mat-label>
+      <mat-select [ngModel]="selectedUnidadTecnica.idDptoTecnico"  formControlName="unidadTecnica">
+        <mat-option *ngFor="let UnidadTecnica of unidadTecnicas" [value]="UnidadTecnica.idDptoTecnico">
+          {{UnidadTecnica.nombre}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
 
    <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
-    <mat-form-field class="createUser" fxFlex>
-      <mat-label class="label">Id Usuario</mat-label>
-
-        <input matInput placeholder = "Id Usuario" formControlName="idUser" readonly onmousedown="return false;">
-    </mat-form-field>
-
-
-    <mat-form-field class="createUser" fxFlex>
-      <mat-label class="label">Abreviatura</mat-label>
-        <input matInput placeholder = "Abreviatura" formControlName="abreviatura" readonly onmousedown="return false;">
-    </mat-form-field>
-
-
-
-
-
-  </div>
-
-
- <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-          <mat-form-field fxFlex appearance="outline">
-            <mat-label class="label">Unidad Tecnica</mat-label>
-            <mat-select [(ngModel)]="selectedUnidadTecnica.idDptoTecnico"  formControlName="unidadTecnica">
-              <mat-option *ngFor="let UnidadTecnica of unidadTecnicas" [value]="UnidadTecnica.idDptoTecnico">
-                {{UnidadTecnica.nombre}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-
-  </div>
-  <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-    <!-- <mat-form-field fxFlex appearance="outline">
-      <mat-label class="label">Tipo Usuario</mat-label>
-      <mat-select [ngModel]="selectedTipoUsuario.id" formControlName="tipoUsuario">
-        <mat-option *ngFor="let TipoUsuario of tipoUsuarios" [value]="TipoUsuario.id">
-          {{TipoUsuario.nombre}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field> -->
-
-    <mat-form-field fxFlex appearance="outline">
-      <mat-label class="label">Tipo Usuario</mat-label>
-      <mat-select [(ngModel)]="selectedTiposUsuarios"  formControlName="tipoUsuario">
-        <mat-option *ngFor="let tipoUsuario of tiposUsuarios" [value]="tipoUsuario.id">
-          {{tipoUsuario.nombre}}
-        </mat-option>
-
-      </mat-select>
-    </mat-form-field>
-    </div>
-    <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-
-
 
      <mat-form-field fxFlex appearance="outline">
-      <mat-label class="label">Perfil</mat-label>
-      <mat-select formControlName="perfil">
-        <mat-option *ngFor="let perfil of perfiles" [value]="perfil">
-          {{perfil.nombre}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field> 
+       <mat-label class="label">Tipo Usuario</mat-label>
+       <mat-select [(ngModel)]="selectedTiposUsuarios.id"  formControlName="tipoUsuario">
+         <mat-option *ngFor="let tipoUsuario of tiposUsuarios" [value]="tipoUsuario.id">
+           {{tipoUsuario.nombre}}
+         </mat-option>
 
-  </div>
-  <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+       </mat-select>
+     </mat-form-field>
+     </div>
+     <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+     <mat-form-field fxFlex appearance="outline">
+       <mat-label class="label">Perfil</mat-label>
+       <mat-select [(ngModel)]="selectedPerfiles.idPerfil"  formControlName="perfil">
+
+         <mat-option *ngFor="let perfil of perfiles" [value]="perfil.idPerfil">
+           {{perfil.nombre}}
+         </mat-option>
+       </mat-select>
+
+     </mat-form-field>
+
+
+
+     <!-- <mat-form-field fxFlex appearance="outline">
+       <mat-label class="label">Perfil</mat-label>
+       <mat-select formControlName="perfil">
+         <mat-option *ngFor="let perfil of perfiles" [value]="perfil">
+           {{perfil.nombre}}
+         </mat-option>
+       </mat-select>
+     </mat-form-field> -->
+
+   </div>
+   <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
     <mat-form-field  appearance="outline">
       <mat-label class="label">Estado</mat-label>
@@ -90,17 +98,19 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-  -->
+ -->
+
+
   </div>
-  </mat-dialog-content>
+   </mat-dialog-content>
 
-  <mat-dialog-actions>
+   <mat-dialog-actions>
 
-      <button class="btn1" mat-flat-button color="accent" (click) = "cerrar()">
-        <mat-icon>cancel</mat-icon>Cancelar
-      </button>
+       <button class="btn1" mat-flat-button color="accent" (click) = "cerrar()">
+         <mat-icon>cancel</mat-icon>Cancelar
+       </button>
 
-      <button  class="btn2"  mat-flat-button color="primary" (click) = "guardar()"><mat-icon>save</mat-icon>Modificar</button>
-      <button class="btn3" mat-flat-button ><mat-icon>enhanced_encryption</mat-icon>RESETEAR CONTRASEÑA</button>
-  </mat-dialog-actions>
-</div>
+       <button  class="btn2"  mat-flat-button color="primary" (click) = "guardar()"><mat-icon>save</mat-icon>Modificar</button>
+       <button class="btn3" mat-flat-button ><mat-icon>enhanced_encryption</mat-icon>RESETEAR CONTRASEÑA</button>
+   </mat-dialog-actions>
+ </div>
