--- a/src/app/dashboard/usuario/modifyusers/modifyusers.component.scss
+++ b/src/app/dashboard/usuario/modifyusers/modifyusers.component.scss
@@ -17,10 +17,10 @@ mat-dialog-content{
   border: 30px;
 }
 input{
-  font-family: Arial; font-size: 10pt; 
+  font-family: Arial; font-size: 10pt;
   }
   mat-select{
-    font-family: Arial; font-size: 10pt; 
+    font-family: Arial; font-size: 10pt;
   }
 
 
@@ -102,3 +102,14 @@ mat-dialog-actions{
   display: block;
   float: left;
 }
+
+.title{
+  background-color: #F3F7F3;
+  .text{
+   color: #123CF6;
+   font-size: 20px;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-style: normal;
+   text-align: center;
+ }
+ }
