--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   * {
     box-sizing: border-box;
   }
-
+  .icom{
+    color:blue;
+  }
   
 
 @media only screen and (min-width: 600px) {
